Fix: Firefox ui issues (#995)
* Fix: Icons in the default and in the matchers are misaligned on Firefox

* Fix firefox scrolling issue

--- a/services/editor/src/pages/keys/components/KeysPage/KeysPage.css
+++ b/services/editor/src/pages/keys/components/KeysPage/KeysPage.css
@@ -12,6 +12,7 @@
 .keys-page-container .keys-list .keys-list-wrapper {
   display: flex;
   flex-grow: 1;
+  min-height: 1px;
 }
 .keys-page-container .key-page {
   position: relative;
